# robocup-home-education-regiros

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: followperson.xml  prueba.xml
color_filter/: CMakeLists.txt  package.xml
color_filter/include/color_filter/: nodo_box.h  nodo_mediargb.h  nodo_rgbcolor.h
color_filter/launch/: color_filter.launch
color_filter/msg/: box_in_image.msg  colorpart.msg  rgb_val.msg
color_filter/src/: nodo_box.cpp  nodo_mediargb.cpp  nodo_rgbcolor.cpp
config/: VisualBTConfig.yaml
find_my_mate/: CMakeLists.txt  package.xml
find_my_mate/behavior_trees/: find_my_mate.xml  prueba.xml
find_my_mate/include/find_my_mate/: BTNavAction.h  Chat.h  Client_nav.h  Description.h  GetInfo.h  GoPosition.h  RotateUPerson.h  SendPoint.h  SendReferee.h  Start.h  Starting.h  str_followobj.h  str_info.h
find_my_mate/src/: Chat.cpp  Description.cpp  GetInfo.cpp  Start.cpp  find_my_mate_node.cpp  nodo_prueba.cpp  testRotUPerson_node.cpp  teststart.cpp  teststarting.cpp
find_my_mate/src/Position/: Client_nav.cpp  GoPosition.cpp  SendPoint.cpp  SendReferee.cpp
find_my_mate/src/find_my_mate/: Chat.cpp  Description.cpp  GetInfo.cpp  GoPosition.cpp  RotateUPerson.cpp  Start.cpp  Starting.cpp
include/robocup_home_education/: BTNavAction.h  IfPerson.h  Move.h  Process.h  ifperson.h  str_followobj.h
maps/: mapa_prueba2.pgm  mapa_prueba2.yaml
msg/: pos_person.msg
msgs/: CMakeLists.txt  package.xml
msgs/msg/: goalpos.msg  pos_person.msg
recepcionist/: CMakeLists.txt  package.xml
recepcionist/behavior_trees/: bt_recepcionist.xml
recepcionist/include/recepcionist/: AskAge.h  AskDrink.h  AskName.h  Chat.h  Client_nav.h  DetectSeat.h  OfferSeat.h  PersonInfo.h  SayInfo.h  SendEntry.h  SendReferee.h  SendSit.h  Start.h  str_followobj.h
recepcionist/src/: node_bt_recept.cpp
recepcionist/src/Move/: Client_nav.cpp  SendEntry.cpp  SendReferee.cpp  SendSit.cpp
recepcionist/src/speech/: AskAge.cpp  AskDrink.cpp  AskName.cpp  Chat.cpp  DetectSeat.cpp  OfferSeat.cpp  SayInfo.cpp  Start.cpp
robocup/: CMakeLists.txt  README.md  package.xml
robocup/behavior_trees/: bt_carry_my_luggage.xml  bt_first_goal.xml  followperson.xml
robocup/include/robocup_home_education/: BTNavAction.h  Carrot.h  Move.h  PIDController.h  SendPoint.h  str_followobj.h
robocup/include/robocup_home_education/person_detected/: DetectedPerson.h  detect_BBX.h  person_tf.h
robocup/src/: node_person_box.cpp  nodo_first_goal.cpp  nodo_person_tf.cpp  nodo_rgbd_filter.cpp  nodo_tfperson_sub.cpp  nodo_tree_move.cpp
robocup/src/movement/: Carrot.cpp  Move.cpp  PIDController.cpp
robocup/src/person_detected/: DetectedPerson.cpp  detect_BBX.cpp  person_tf.cpp
robocup/src/robocup_home_education/: Move.cpp  Process.cpp
robocup/src/start/: SendPoint.cpp
speech/: CMakeLists.txt  package.xml
speech/behavior_tree/: speech_bt.xml
speech/include/speech/: AskAge.h  AskDrink.h  AskName.h  Chat.h  DetectSeat.h  Move.h  OfferSeat.h  PersonInfo.h  SayInfo.h  Start.h
speech/src/: AskDrink.cpp  AskName.cpp  speech_node.cpp  speech_srv_node.cpp
speech/src/speech/: AskAge.cpp  AskDrink.cpp  AskName.cpp  Chat.cpp  DetectSeat.cpp  Move.cpp  OfferSeat.cpp  SayInfo.cpp  Start.cpp
speech/srv/: speech.srv
src/: followperson_node.cpp  node_person_tf.cpp  nodo_person_box.cpp
src/robocup_home_education/: IfPerson.cpp  Move.cpp  Process.cpp  ifperson.cpp
takeluggage/: CMakeLists.txt  package.xml
takeluggage/behavior_trees/: bt_take_luggage.xml
takeluggage/include/takeluggage/: Chat.h  Client_nav.h  DetectLuggage.h  Say.h  SendReferee.h  Start.h  WaitForOrder.h  str_followobj.h
takeluggage/src/: node_bt_take.cpp
takeluggage/src/Move/: Client_nav.cpp  SendReferee.cpp
takeluggage/src/speech/: Chat.cpp  DetectLuggage.cpp  Say.cpp  Start.cpp  WaitForOrder.cpp
