<?xml version="1.0"?>
<package format="2">
  <name>find_my_mate</name>
  <version>0.0.0</version>
  <description>The robocup_home_education package</description>

  <maintainer email="m.wiesenberg.2020@alumnos.urjc.es">mwiesenberg2020</maintainer>

  <license>Apache 2</license>
  <url type="website">https://www.aulavirtual.urjc.es/moodle/course/view.php?id=144699</url>

  <author email="m.wiesenberg.2020@alumnos.urjc.es">mwiesenberg2020</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>cameras_cpp</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>libzmq3-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dialogflow_ros_msgs</build_depend>
  <build_depend>gb_dialog</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>color_filter</build_depend>

 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
	<build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
  <build_export_depend>libzmq3-dev</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>libopencv-dev</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>dialogflow_ros_msgs</build_export_depend>
  <build_export_depend>gb_dialog</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>navfn</build_export_depend>
  <build_export_depend>color_filter</build_export_depend>

 
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>cameras_cpp</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>libzmq3-dev</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dialogflow_ros_msgs</exec_depend>
  <exec_depend>gb_dialog</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>color_filter</exec_depend>

  <export>
  </export>
</package>